--- a/package.json
+++ b/package.json
@@ -12,27 +12,128 @@
     "ionic:serve": "ionic-app-scripts serve"
   },
   "dependencies": {
-    "@angular/common": "5.0.3",
-    "@angular/compiler": "5.0.3",
-    "@angular/compiler-cli": "5.0.3",
-    "@angular/core": "5.0.3",
-    "@angular/forms": "5.0.3",
-    "@angular/http": "5.0.3",
-    "@angular/platform-browser": "5.0.3",
-    "@angular/platform-browser-dynamic": "5.0.3",
-    "@ionic-native/core": "4.4.0",
-    "@ionic-native/splash-screen": "4.4.0",
-    "@ionic-native/status-bar": "4.4.0",
-    "@ionic/storage": "2.1.3",
-    "ionic-angular": "3.9.2",
+    "@angular/animations": "4.0.0",
+    "@angular/common": "4.0.0",
+    "@angular/compiler": "4.0.0",
+    "@angular/compiler-cli": "4.0.0",
+    "@angular/core": "4.0.0",
+    "@angular/forms": "4.0.0",
+    "@angular/http": "4.0.0",
+    "@angular/platform-browser": "4.0.0",
+    "@angular/platform-browser-dynamic": "4.0.0",
+    "@angular/router": "4.0.0",
+    "@ionic-native/badge": "^4.1.0",
+    "@ionic-native/camera": "^4.1.0",
+    "@ionic-native/code-push": "^4.2.0",
+    "@ionic-native/core": "3.12.1",
+    "@ionic-native/date-picker": "^4.1.0",
+    "@ionic-native/device": "^4.1.0",
+    "@ionic-native/diagnostic": "^4.1.0",
+    "@ionic-native/facebook": "^4.1.0",
+    "@ionic-native/file": "^4.1.0",
+    "@ionic-native/file-transfer": "^4.1.0",
+    "@ionic-native/firebase": "^4.1.0",
+    "@ionic-native/geolocation": "^4.1.0",
+    "@ionic-native/google-plus": "^4.1.0",
+    "@ionic-native/keyboard": "^4.2.1",
+    "@ionic-native/local-notifications": "^4.2.1",
+    "@ionic-native/market": "^4.1.0",
+    "@ionic-native/network": "^4.1.0",
+    "@ionic-native/splash-screen": "^3.12.1",
+    "@ionic-native/sqlite": "^4.2.1",
+    "@ionic-native/status-bar": "^3.12.1",
+    "@ionic-native/stripe": "^4.1.0",
+    "@ionic/storage": "^2.0.1",
+    "@types/twix": "^0.6.35",
+    "angular-svg-round-progressbar": "^1.1.0",
+    "angular2-text-mask": "^8.0.3",
+    "cordova-android": "^6.2.3",
+    "cordova-ios": "^4.4.0",
+    "cordova-plugin-badge": "^0.8.1",
+    "cordova-plugin-camera": "^2.4.1",
+    "cordova-plugin-compat": "^1.1.0",
+    "cordova-plugin-console": "^1.0.7",
+    "cordova-plugin-device": "^1.1.6",
+    "cordova-plugin-facebook4": "^1.9.1",
+    "cordova-plugin-file": "^4.3.3",
+    "cordova-plugin-file-transfer": "^1.6.3",
+    "cordova-plugin-firebase": "0.1.23",
+    "cordova-plugin-geolocation": "^2.4.3",
+    "cordova-plugin-googleplus": "^5.1.1",
+    "cordova-plugin-market": "^1.1.3",
+    "cordova-plugin-network-information": "^1.3.3",
+    "cordova-plugin-splashscreen": "^4.0.3",
+    "cordova-plugin-statusbar": "^2.2.3",
+    "cordova-plugin-stripe": "^1.5.3",
+    "cordova-plugin-whitelist": "^1.3.2",
+    "cordova.plugins.diagnostic": "^3.6.6",
+    "ionic-angular": "3.6.0",
+    "ionic-image-loader": "^4.1.1",
+    "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
-    "rxjs": "5.5.2",
+    "lodash": "^4.17.4",
+    "moment": "^2.18.1",
+    "ng2-trim-directive": "^1.0.5",
+    "rxjs": "5.4.0",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.18"
+    "text-mask-addons": "^3.6.0",
+    "twix": "^1.2.0",
+    "web-animations-js": "^2.3.1",
+    "zone.js": "0.8.12"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.1.8",
-    "typescript": "2.4.2"
+    "@angular/cli": "^1.0.0",
+    "@ionic/app-scripts": "2.1.3",
+    "@types/jasmine": "^2.5.53",
+    "@types/node": "^7.0.13",
+    "codecov": "^2.1.0",
+    "cordova-update-config": "^1.0.2",
+    "jasmine-core": "^2.5.2",
+    "jasmine-spec-reporter": "^4.0.0",
+    "karma": "^1.6.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-cli": "^1.0.1",
+    "karma-coverage-istanbul-reporter": "^1.2.0",
+    "karma-jasmine": "^1.1.0",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-mocha-reporter": "^2.2.3",
+    "karma-remap-istanbul": "^0.6.0",
+    "ts-node": "^3.0.2",
+    "tslint": "^5.1.0",
+    "tslint-eslint-rules": "^4.0.0",
+    "typescript": "2.3.4"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-badge": {},
+      "cordova-plugin-camera": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-firebase": {},
+      "cordova-plugin-geolocation": {
+        "GEOLOCATION_USAGE_DESCRIPTION": " "
+      },
+      "cordova-plugin-network-information": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-stripe": {},
+      "cordova.plugins.diagnostic": {},
+      "cordova-plugin-facebook4": {
+        "APP_ID": "337808826677376",
+        "APP_NAME": "Spur"
+      },
+      "cordova-plugin-googleplus": {
+        "REVERSED_CLIENT_ID": "com.googleusercontent.apps.806632969691-cphgj7pmhtq840r1kfalo6stn806b2hr"
+      },
+      "cordova-plugin-file": {},
+      "cordova-plugin-file-transfer": {},
+      "cordova-plugin-console": {},
+      "cordova-plugin-whitelist": {},
+      "ionic-plugin-keyboard": {}
+    },
+    "platforms": [
+      "android",
+      "ios"
+    ]
+  }
 }
